# pokemon-battle-system

./: Cargo.toml  README.md
.github/workflows/: r.yml  rust.yml
json/: pokemon_data.json  skill_data.json  trainer_data.json
src/: main.rs
src/cli/: battle.rs  mod.rs  print.rs  prompt.rs
src/dto/: mod.rs  pokemon.rs  skill.rs  trainer.rs
src/file/: json.rs
src/logic/: rand.rs
src/models/: mod.rs  pokemon.rs  trainer.rs
src/services/battle/: element.rs  mod.rs  pokemon.rs  trainer.rs  type_.rs
src/test/: hard_coded.rs  mod.rs
