[package]
name = "pokemon-battle-system"
version = "0.1.0"
authors = ["Ometeor-Zheero-OMZ <sicsempertyrannis98@gmail.com>"]
description = "Emulating pokemon battle system on CLI"
repository = "https://github.com/Ometeor-Zheero-OMZ/pokemon-battle-system"
readme = "README.md"
categories = ["pokemon", "pokemon battle", "battle system", "game"]
edition = "2024"
rust-version = "1.86"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[profile.dev]
opt-level = 3
incremental = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false